added item page

--- a/client/src/layout/Footer/Footer.module.scss
+++ b/client/src/layout/Footer/Footer.module.scss
@@ -2,7 +2,7 @@ footer {
   // height: 5rem;
   padding: 1rem 0;
   background-color: black;
-  margin-top: 5rem;
+  // margin-top: 5rem;
   color: white;
   display: flex;
   flex-direction: column;
