--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -27,6 +27,10 @@ a {
   text-decoration: none;
   color: inherit;
 }
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
 body {
   font-family: Nunito;
   // font-size: 1rem;
@@ -69,11 +73,16 @@ body {
   --bg-color2: pink;
   --bord: solid pink 3px;
   --sec-color: rgb(245, 89, 43);
+  --height: calc(100vh - 54px);
 }
 
 .container {
-  width: 93%;
-  margin: 0 auto;
+  // width: 93%;
+  max-width: 100%;
+
+  width: 100vw;
+  margin: 0;
+  padding: 0;
   position: relative;
 }
 
