--- a/client/src/components/Featured/Featured.module.scss
+++ b/client/src/components/Featured/Featured.module.scss
@@ -1,6 +1,7 @@
 .featured {
   background-color: #ccc;
   padding: 60px;
+  height: var(--height);
   .featuredbox {
     display: flex;
     justify-content: center;
@@ -8,13 +9,20 @@
       padding: 10px;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      justify-content: space-between;
+      // align-items: center;
       width: 200px;
       margin: 0 10px;
       p {
         padding-top: 5px;
         align-self: flex-start;
         font-size: 0.8rem;
+      }
+      img {
+        max-width: 100%;
+        max-height: 300px;
+        vertical-align: middle;
+        margin: auto;
       }
     }
   }
