--- a/client/src/layout/NavBar/NavBar.module.scss
+++ b/client/src/layout/NavBar/NavBar.module.scss
@@ -8,7 +8,12 @@ nav {
   padding: 1rem 3rem;
   display: flex;
   justify-content: space-between;
+  // font-weight: bolder;
+  li {
+    cursor: pointer;
+  }
   div:nth-child(1) {
+    cursor: pointer;
     flex: 1;
   }
   div:nth-child(2) {
@@ -31,6 +36,7 @@ nav {
     span,
     i {
       margin-left: 30px;
+      cursor: pointer;
     }
   }
 }
