--- a/client/src/pages/Item/Item.module.scss
+++ b/client/src/pages/Item/Item.module.scss
@@ -1,31 +1,60 @@
 .next,
 .previous {
-  height: 70px;
-  width: 70px;
+  cursor: pointer;
+  // height: 70px;
+  width: 75px;
   position: absolute;
-  background: url('https://via.placeholder.com/70/000');
+  top: 10px;
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  span {
+    text-align: center;
+    font-size: 0.7rem;
+    font-weight: bold;
+  }
+  div {
+    display: flex;
+    justify-content: center;
+  }
 }
 .previous {
-  top: 10px;
-  left: -20px;
+  left: -35px;
+  i {
+    padding-right: 5px;
+  }
 }
 .next {
-  top: 10px;
-  right: -45px;
+  right: -35px;
+  i {
+    padding-left: 5px;
+  }
 }
 .product {
   // @include card();
   margin-top: 54px;
-  height: 100vh;
   height: calc(100vh - 54px);
   width: 100%;
-  display: grid;
+  // display: grid;
+  display: flex;
   // margin-bottom: 50px;
-  grid-template-columns: 2fr 1fr;
-  & > div:nth-child(1) {
-    background: url('https://via.placeholder.com/700X550/000');
-    margin: 2rem;
+  // grid-template-columns: 2fr 1fr;
+  padding: 20px;
+  & > div {
+    flex: 1;
   }
+  img {
+    flex: 2;
+
+    max-width: 100%;
+    max-height: 100%;
+  }
+  // & > div:nth-child(1) {
+  //   // background: url('https://via.placeholder.com/700X550/000');
+
+  //   margin: 2rem;
+  // }
   & > div:nth-child(2) {
     display: flex;
     flex-direction: column;
@@ -33,7 +62,7 @@
     padding-right: 4rem;
     p:nth-child(1) {
       flex-basis: 5%;
-      background-color: red;
+      // background-color: red;
       margin-top: 20px;
     }
     p:nth-child(2) {
@@ -75,6 +104,7 @@
       justify-content: center;
       align-items: center;
       .check2 {
+        transition: background-color 0.5s ease;
         &:hover {
           background-color: white;
           color: black;
