--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -34,40 +34,41 @@ img {
 body {
   font-family: Nunito;
   // font-size: 1rem;
-  // &::-webkit-scrollbar-track {
-  //   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  //   background-color: #f5f5f5;
-  // }
-  // &::-webkit-scrollbar {
-  //   width: 6px;
-  //   background-color: #f5f5f5;
-  // }
-  // &::-webkit-scrollbar-thumb {
-  //   background-color: #000000;
-  // }
   &::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
     background-color: #f5f5f5;
   }
-
   &::-webkit-scrollbar {
-    width: 12px;
+    width: 6px;
     background-color: #f5f5f5;
   }
-
   &::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    // background-color: #D62929;
-    background-color: #555;
+    background-color: #000000;
   }
+  // &::-webkit-scrollbar-track {
+  //   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  //   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  //   border-radius: 10px;
+  //   background-color: #f5f5f5;
+  // }
+
+  // &::-webkit-scrollbar {
+  //   width: 12px;
+  //   background-color: #f5f5f5;
+  // }
+
+  // &::-webkit-scrollbar-thumb {
+  //   border-radius: 10px;
+  //   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  //   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  //   // background-color: #D62929;
+  //   background-color: #555;
+  // }
 }
 
 :root {
   // --bg-color: #5a3f83;
+  //fafafa very light grey
   --bg-color: #715797;
   --bg-color3: #eee;
   --bg-color2: pink;
@@ -111,86 +112,3 @@ body {
 // .arrival {
 //   background: url('https://via.placeholder.com/100');
 // }
-
-.category {
-  margin-top: 5rem;
-  display: grid;
-  grid-template-columns: repeat(4, 20%);
-  grid-template-rows: repeat(3, 400px);
-  grid-gap: 20px;
-  justify-content: center;
-  .cat-item1 {
-    display: flex;
-    background: linear-gradient(to right, #da4453, #89216b);
-    grid-row: 1 / span 1;
-    grid-column: 1 / span 2;
-    .cat-item11 {
-      flex: 1;
-      background: url('/assets/dress.png') no-repeat center/cover;
-      background-origin: content-box;
-      height: 100%;
-      width: 100%;
-      position: relative;
-      div {
-        background: url('/assets/best.png') no-repeat center/cover;
-        height: 80px;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-      }
-    }
-    .cat-item12 {
-      flex: 1;
-      color: white;
-      font-size: 2rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      align-items: center;
-      span:nth-child(1) {
-        text-align: center;
-        font-family: oswald;
-        font-size: 3rem;
-      }
-      span:nth-child(2) {
-        border-top: white 2px solid;
-        border-bottom: white 2px solid;
-      }
-      span:nth-child(3) {
-        padding: 1rem 2rem;
-        background-color: #280c28;
-        cursor: pointer;
-      }
-    }
-  }
-  .cat-item {
-    padding: 3rem 1.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: var(--bg-color3);
-    cursor: pointer;
-
-    .desc {
-      display: flex;
-      flex-direction: column;
-      & div {
-        display: flex;
-        justify-content: space-between;
-      }
-      & p {
-        opacity: 0.5;
-        font-size: 90%;
-      }
-    }
-    .cat-img {
-      @include shadow();
-      flex: 5;
-      height: 100%;
-      width: 100%;
-      background: url('/assets/fashion-dress.png') no-repeat center/cover;
-      background-origin: content-box;
-      margin-bottom: 2rem;
-    }
-  }
-}
