--- a/client/src/components/Collection/Collection.module.scss
+++ b/client/src/components/Collection/Collection.module.scss
@@ -22,7 +22,7 @@
     }
     div:nth-child(1) {
       grid-area: item1;
-      background: url('https://pixabay.com/get/54e5dc444852a914f1dc8460825668204022dfe05b51714b7c2a7cd2/blouse-2597205_640.jpg')
+      background: url('https://cdn.pixabay.com/photo/2017/08/06/22/52/blouse-2597205_640.jpg')
         center/cover;
       // transition: 1s ease-in;
       &:hover {
@@ -33,17 +33,17 @@
     }
     div:nth-child(2) {
       grid-area: item2;
-      background: url('https://pixabay.com/get/55e7d744435bab14f1dc8460825668204022dfe05b51714a752e7ed6/leather-craft-3727997_640.jpg')
+      background: url('https://cdn.pixabay.com/photo/2018/10/06/14/48/leather-craft-3727997_640.jpg')
         center/cover;
     }
     div:nth-child(3) {
       grid-area: item3;
-      background: url('https://pixabay.com/get/54e0d24a4354a814f1dc8460825668204022dfe05b51714b7c287ed5/argentine-tango-2079964_640.jpg')
+      background: url('https://cdn.pixabay.com/photo/2017/02/19/14/57/argentine-tango-2079964_640.jpg')
         center/cover;
     }
     div:nth-child(4) {
       grid-area: item4;
-      background: url('https://pixabay.com/get/57e9d0454f56b10ff3d89938b977692b083edbed535172497c2b7a/hands-195654_640.jpg')
+      background: url('https://cdn.pixabay.com/photo/2013/10/14/19/53/hands-195653_640.jpg')
         center/cover;
     }
     // div:nth-child(5) {
