--- a/client/src/components/NewArrivals/NewArrivals.module.scss
+++ b/client/src/components/NewArrivals/NewArrivals.module.scss
@@ -1,16 +1,30 @@
 .newarrivals {
   background-color: #ccc;
   padding: 60px;
-  height: var(--height);
+  // height: var(--height);
   .arrivalsbox {
-    height: 60vh;
+    // height: 60vh;
     display: grid;
-    grid-template-columns: repeat(3, 320px);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 200px);
+    grid-template-rows: repeat(2, 300px);
     grid-gap: 10px;
     justify-content: center;
+    .arrival {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 1rem;
+      background-color: white;
+
+      div:nth-child(1) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+      }
+      div:nth-child(2) {
+      }
+    }
   }
-}
-.arrival {
-  background: url('https://via.placeholder.com/100/FFFFFF');
 }
