--- a/client/src/components/NewArrivals/NewArrivals.module.scss
+++ b/client/src/components/NewArrivals/NewArrivals.module.scss
@@ -1,5 +1,5 @@
 .newarrivals {
-  background-color: #ccc;
+  background-color: #eee;
   padding: 60px;
   // height: var(--height);
   .arrivalsbox {
