--- a/client/src/layout/NavBar/NavBar.module.scss
+++ b/client/src/layout/NavBar/NavBar.module.scss
@@ -15,6 +15,9 @@ nav {
   div:nth-child(1) {
     cursor: pointer;
     flex: 1;
+    img {
+      height: 30px;
+    }
   }
   div:nth-child(2) {
     width: 33%;
