--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -1,26 +1,47 @@
 header {
   position: relative;
+  margin-top: 54px;
+  height: var(--height);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  & > span {
+    color: var(--bg-color);
+    font-size: 5rem;
+    position: absolute;
+    font-family: 'Nunito';
+    font-weight: bolder;
+  }
+  & > :nth-child(2) {
+    top: 200px;
+    left: 50px;
+  }
+  & > :nth-child(3) {
+    top: 200px;
+    right: 170px;
+  }
+  & > img {
+    // position: absolute;
+    // bottom: 0;
+    // left: 50%;
+    // right: 0;
+    // height: 80vh;
+  }
   div {
     /*Free Snowball Dots SVG provided by SVGeez.com - CC 4.0 License - © 2019 Megan Young */
     // background-color: transparent;
-    background-color: var(--bg-color);
+    // background-color: var(--bg-color);
     fill: #fff;
     background-size: 500px;
     background-repeat: repeat;
-    // background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='Layer_1' fill-opacity='1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500' style='enable-background:new 0 0 500 500'%3E%3Cstyle%3E .st0{fill:rgba(255,255,255,1)} %3C/style%3E%3Ccircle class='st0' cx='87.5' cy='46.5' r='8.5'/%3E%3Ccircle class='st0' cx='94.5' cy='124.5' r='15.5'/%3E%3Ccircle class='st0' cx='244.5' cy='91.5' r='21.5'/%3E%3Ccircle class='st0' cx='348.5' cy='80.5' r='7.5'/%3E%3Ccircle class='st0' cx='155' cy='356' r='10'/%3E%3Ccircle class='st0' cx='422' cy='139' r='14'/%3E%3Ccircle class='st0' cx='123' cy='251' r='6'/%3E%3Ccircle class='st0' cx='280' cy='204' r='11'/%3E%3Ccircle class='st0' cx='315' cy='311' r='11'/%3E%3Ccircle class='st0' cx='262' cy='411' r='6'/%3E%3Ccircle class='st0' cx='455.5' cy='395.5' r='12.5'/%3E%3Ccircle class='st0' cx='432' cy='500' r='25'/%3E%3Ccircle class='st0' cx='432' r='25'/%3E%3Ccircle class='st0' cx='-3.5' cy='240.5' r='10.5'/%3E%3Ccircle class='st0' cx='496.5' cy='240.5' r='10.5'/%3E%3Ccircle class='st0' cx='96' cy='437' r='3'/%3E%3C/svg%3E");
     margin-top: 54px;
     height: calc(100vh - 54px);
-    img {
-      position: absolute;
-      top: 53vh;
-      right: 0;
-      height: 80vh;
-    }
-  }
-  img {
-    position: absolute;
-    bottom: 0;
-    // right: 0;
-    // height: 80vh;
+    // img {
+    //   position: absolute;
+    //   top: 53vh;
+    //   right: 0;
+    //   height: 80vh;
+    // }
   }
 }
