--- a/client/src/pages/Item/Item.module.scss
+++ b/client/src/pages/Item/Item.module.scss
@@ -1,10 +1,12 @@
 .next,
 .previous {
   cursor: pointer;
-  // height: 70px;
+  height: 70px;
   width: 75px;
   position: absolute;
   top: 10px;
+  text-align: center;
+
   img {
     max-width: 100%;
     max-height: 100%;
@@ -20,13 +22,13 @@
   }
 }
 .previous {
-  left: -35px;
+  left: 0;
   i {
     padding-right: 5px;
   }
 }
 .next {
-  right: -35px;
+  right: 0;
   i {
     padding-left: 5px;
   }
@@ -46,7 +48,7 @@
   }
   img {
     flex: 2;
-
+    padding: 1rem;
     max-width: 100%;
     max-height: 100%;
   }
@@ -92,9 +94,24 @@
       justify-content: space-around;
       align-items: center;
       div {
-        background: url('https://via.placeholder.com/70/000000') no-repeat;
+        cursor: pointer;
         height: 70px;
         width: 70px;
+        &:nth-child(1) {
+          &:hover {
+            background-color: red;
+          }
+        }
+        &:nth-child(2) {
+          &:hover {
+            background-color: green;
+          }
+        }
+        &:nth-child(3) {
+          &:hover {
+            background-color: blue;
+          }
+        }
       }
     }
     .check {
@@ -137,4 +154,13 @@
       }
     }
   }
+}
+.red {
+  background-color: red;
+}
+.green {
+  background-color: green;
+}
+.blue {
+  background-color: blue;
 }
