--- a/client/src/layout/NavBar/NavBar.module.scss
+++ b/client/src/layout/NavBar/NavBar.module.scss
@@ -1,5 +1,6 @@
 nav {
-  background-color: white;
+  background-color: var(--bg-color1);
+  color: var(--color);
   z-index: 3;
   position: fixed;
   top: 0;
@@ -29,6 +30,7 @@ nav {
     width: 70%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   div:nth-child(3) {
@@ -36,6 +38,7 @@ nav {
     width: 33%;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     span,
     i {
       margin-left: 30px;
