--- a/client/src/layout/NavBar/NavBar.module.scss
+++ b/client/src/layout/NavBar/NavBar.module.scss
@@ -1,5 +1,5 @@
 nav {
-  background-color: var(--bg-color1);
+  background-color: var(--nav-color);
   color: var(--color);
   z-index: 3;
   position: fixed;
