--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -68,9 +68,14 @@ body {
 
 :root {
   --bg-color: #5662ca;
-  --bg-color1: white;
+  --nav-color: white;
+  --bg-color2: white;
   --bg-color3: #eee;
   --color: black;
+  --card: #fff;
+  --accent: #5662ca;
+  --linear: linear-gradient(to right, #da4453, #89216b);
+
   // --bg-color: #5a3f83;
   //fafafa very light grey
   // --bg-color2: pink;
@@ -98,7 +103,8 @@ body {
 }
 // HELPER
 .card {
-  background: #fff;
+  background: var(--card);
+  color: var(--color);
   border-radius: 2px;
   // padding: 1rem;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -108,8 +114,8 @@ body {
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 60px;
+  color: var(--color);
 }
 // .arrival {
 //   background: url('https://via.placeholder.com/100');
 // }
-
