--- a/client/src/components/Featured/Featured.module.scss
+++ b/client/src/components/Featured/Featured.module.scss
@@ -1,10 +1,14 @@
 .featured {
-  background-color: #eee;
+  background-color: var(--bg-color3);
   padding: 60px;
   height: var(--height);
+  & > p {
+    color: var(--color);
+  }
   .featuredbox {
     display: flex;
     justify-content: center;
+
     & div {
       padding: 10px;
       display: flex;
