--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -6,6 +6,7 @@ header {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  background-color: var(--bg-color2);
   & > span {
     color: var(--bg-color);
     font-size: 5rem;
@@ -43,12 +44,5 @@ header {
     //   right: 0;
     //   height: 80vh;
     // }
-  }
-}
-
-.theme {
-  background-color: #212121;
-  & > span {
-    color: white;
   }
 }
