--- a/client/src/pages/Item/Item.module.scss
+++ b/client/src/pages/Item/Item.module.scss
@@ -6,6 +6,7 @@
   position: absolute;
   top: 10px;
   text-align: center;
+  color: var(--color);
 
   img {
     max-width: 100%;
@@ -41,6 +42,11 @@
   padding: 20px;
   .rest {
     flex: 1;
+    .choice {
+      div {
+        text-align: center;
+      }
+    }
   }
   .img {
     flex: 2;
@@ -50,7 +56,7 @@
     // text-align: center;
     img {
       // margin: auto;
-      padding: 1rem;
+      padding: 60px;
     }
   }
 
@@ -159,10 +165,13 @@
 }
 .red {
   background-color: red;
+  opacity: 0.5;
 }
 .green {
   background-color: green;
+  opacity: 0.5;
 }
 .blue {
   background-color: blue;
+  opacity: 0.5;
 }
