sorted out signup page

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -75,7 +75,8 @@ body {
   --card: #fff;
   --accent: #5662ca;
   --linear: linear-gradient(to right, #da4453, #89216b);
-
+  --sign: #5662ca;
+  --sign2: white;
   // --bg-color: #5a3f83;
   //fafafa very light grey
   // --bg-color2: pink;
