--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -77,6 +77,10 @@ body {
   --linear: linear-gradient(to right, #da4453, #89216b);
   --sign: #5662ca;
   --sign2: white;
+  --checkout: #eee;
+  --checkout2: #5662ca;
+  --select: white;
+
   // --bg-color: #5a3f83;
   //fafafa very light grey
   // --bg-color2: pink;
