--- a/client/src/pages/Cart/Cart.module.scss
+++ b/client/src/pages/Cart/Cart.module.scss
@@ -1,7 +1,8 @@
-td,
+table {
+  border-spacing: 25px;
+}
 th {
-  // border: 1px solid #999;
-  // padding: 0.5rem;
+  font-weight: normal;
 }
 tr {
   th:nth-child(1) {
@@ -28,8 +29,9 @@ tbody {
   padding: 0 3rem;
   display: flex;
   margin-top: 54px;
+  background-color: var(--sign2);
+  color: var(--color);
   .div1 {
-    background-color: yellow;
     padding: 3rem;
     flex: 5;
     display: flex;
@@ -38,17 +40,38 @@ tbody {
     .title {
       display: flex;
       justify-content: space-between;
+      font-size: 1.3rem;
+      font-weight: bold;
     }
     .main {
       .head {
       }
       .content {
+        & > :first-child {
+          display: flex;
+        }
         td {
-          // display: flex;
+          vertical-align: top;
+          // margin-top: 25px;
           // justify-content: space-between;
           img {
             width: 100px;
             height: 100px;
+            margin-right: 20px;
+          }
+          div {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: flex-start;
+            & > :first-child {
+              font-weight: bold;
+            }
+          }
+        }
+        & > :last-child {
+          i {
+            cursor: pointer;
           }
         }
       }
@@ -56,20 +79,29 @@ tbody {
   }
   .div2 {
     padding: 3rem 2rem;
-    background-color: #eee;
+    background-color: var(--checkout);
     flex: 2;
     height: var(--height);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
+    & > :first-child {
+      font-size: 1.3rem;
+      font-weight: bold;
+    }
     .details {
       flex: 1;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      .cost {
+        display: flex;
+        justify-content: space-between;
+      }
       select {
         padding: 1rem;
+        background-color: var(--select);
+        color: var(--color);
       }
       input {
         padding: 1rem;
@@ -82,10 +114,10 @@ tbody {
         align-self: flex-start;
       }
       .checkout {
-        background-color: var(--bg-color);
+        background-color: var(--checkout2);
         text-align: center;
         padding: 1rem;
-        color: white;
+        color: var(--nav-color);
         cursor: pointer;
       }
       & > :nth-child(1) {
@@ -100,6 +132,7 @@ tbody {
 .divider {
   height: 1px;
   background-color: black;
+  margin: 25px 0;
 }
 
 .pay {
