--- a/client/src/pages/About/About.module.scss
+++ b/client/src/pages/About/About.module.scss
@@ -1,5 +1,27 @@
-.vect {
+.about {
   margin-top: 54px;
+  height: var(--height);
+  background-color: var(--checkout);
+  color: var(--color);
+  & > div {
+    text-align: center;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: auto;
+    i {
+      color: red;
+    }
+    div {
+      background-color: var(--accent);
+      padding: 1rem 2rem;
+      cursor: pointer;
+      border-radius: 1rem;
+    }
+  }
   img {
     width: 100%;
   }
