--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -36,6 +36,7 @@ body {
   // font-size: 1rem;
   &::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #f5f5f5;
   }
   &::-webkit-scrollbar {
@@ -54,7 +55,7 @@ body {
 
   // &::-webkit-scrollbar {
   //   width: 12px;
-  //   background-color: #f5f5f5;
+  //   background-color: #f5f5f5; 
   // }
 
   // &::-webkit-scrollbar-thumb {
@@ -80,6 +81,7 @@ body {
   --checkout: #eee;
   --checkout2: #5662ca;
   --select: white;
+  --input: white;
 
   // --bg-color: #5a3f83;
   //fafafa very light grey
