--- a/client/src/layout/NavBar/NavBar.module.scss
+++ b/client/src/layout/NavBar/NavBar.module.scss
@@ -10,30 +10,34 @@ nav {
   display: flex;
   justify-content: space-between;
   // font-weight: bolder;
+  .harmburger {
+    display: none;
+  }
   li {
     cursor: pointer;
   }
-  div:nth-child(1) {
+  .logo {
     cursor: pointer;
     flex: 1;
     img {
-      height: 30px;
+      background-color: var(--nav-color);
+      max-height: 30px;
     }
   }
-  div:nth-child(2) {
+  .links {
     width: 33%;
     flex: 1;
     display: flex;
     justify-content: center;
   }
-  div:nth-child(2) ul {
+  .links ul {
     width: 70%;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 
-  div:nth-child(3) {
+  .icons {
     flex: 1;
     width: 33%;
     display: flex;
@@ -49,4 +53,75 @@ nav {
       cursor: pointer;
     }
   }
+  .icons2 {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  nav {
+    // position: relative;
+    .harmburger {
+      cursor: pointer;
+      display: block;
+      position: absolute;
+      left: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+      div {
+        height: 3px;
+        width: 30px;
+        background-color: var(--color);
+        margin-bottom: 3px;
+      }
+    }
+    .menu {
+      height: 100vh;
+      width: 100vw;
+      background: rgba(0, 0, 0, 0.9);
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      color: white;
+      font-size: 2.5rem;
+      padding: 20vh;
+
+      & > p,
+      & > span {
+        cursor: pointer;
+      }
+    }
+    height: 54px;
+    display: block;
+    .links,
+    .icons {
+      display: none;
+    }
+    .logo {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    .icons2 {
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+      i {
+        margin-left: 15px;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+#display {
+  display: none;
 }
