--- a/client/src/components/NewArrivals/NewArrivals.module.scss
+++ b/client/src/components/NewArrivals/NewArrivals.module.scss
@@ -6,10 +6,9 @@
     color: var(--color);
   }
   .arrivalsbox {
-    // height: 60vh;
     display: grid;
     grid-template-columns: repeat(3, 200px);
-    grid-template-rows: repeat(2, 300px);
+    grid-auto-rows: 300px;
     grid-gap: 20px;
     justify-content: center;
     .arrival {
@@ -19,14 +18,30 @@
       padding: 1rem;
       background-color: var(--card);
       color: var(--color);
-      div:nth-child(1) {
+      & > :nth-child(1) {
+        flex: 1;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        height: 100%;
+        & > div {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
       }
-      div:nth-child(2) {
-      }
+    }
+  }
+}
+
+@media only screen and (max-width: 767px) {
+}
+@media only screen and (max-width: 480px) {
+  .newarrivals {
+    .arrivalsbox {
+      grid-template-columns: 200px;
+      grid-auto-rows: 300px;
     }
   }
 }
