--- a/client/src/layout/Footer/Footer.module.scss
+++ b/client/src/layout/Footer/Footer.module.scss
@@ -13,8 +13,34 @@ footer {
   p:nth-child(1) {
     margin-bottom: 0.5rem;
   }
-  ul {
-    display: flex;
-    margin: 0.5rem 0;
+  & > :nth-child(2) {
+    width: 350px;
+    & > div {
+      ul {
+        display: flex;
+        margin: 0.5rem auto;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  footer {
+    & > :nth-child(2) {
+      width: 45%;
+      ul {
+        justify-content: space-between;
+      }
+    }
+  }
+}
+@media only screen and (max-width: 425px) {
+  footer {
+    & > :nth-child(2) {
+      width: 50%;
+    }
+    & > :nth-child(1) {
+      width: 30%;
+    }
   }
 }
