--- a/client/src/layout/NavBar/NavBar.module.scss
+++ b/client/src/layout/NavBar/NavBar.module.scss
@@ -100,6 +100,7 @@ nav {
     .links,
     .icons {
       display: none;
+      font-size: 1.3rem;
     }
     .logo {
       position: absolute;
@@ -114,6 +115,7 @@ nav {
       right: 20px;
       top: 50%;
       transform: translateY(-50%);
+      font-size: 1.3rem;
       i {
         margin-left: 15px;
         cursor: pointer;
