--- a/client/src/pages/About/About.module.scss
+++ b/client/src/pages/About/About.module.scss
@@ -26,3 +26,11 @@
     width: 100%;
   }
 }
+
+@media only screen and (max-width: 425px) {
+  .about {
+    & > div {
+      width: 70%;
+    }
+  }
+}
