--- a/client/src/pages/Auth/SignIn.module.scss
+++ b/client/src/pages/Auth/SignIn.module.scss
@@ -114,3 +114,10 @@
     }
   }
 }
+
+@media only screen and (max-width: 425px) {
+  .signin {
+    flex-direction: column;
+    height: unset;
+  }
+}
