--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -1,48 +1,85 @@
-header {
-  position: relative;
-  margin-top: 54px;
-  height: var(--height);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  background-color: var(--bg-color2);
-  & > span {
-    color: var(--bg-color);
-    font-size: 5rem;
-    position: absolute;
-    font-family: 'Nunito';
-    font-weight: bolder;
-  }
-  & > :nth-child(2) {
-    top: 200px;
-    left: 50px;
-  }
-  & > :nth-child(3) {
-    top: 200px;
-    right: 170px;
-  }
-  & > img {
-    // position: absolute;
-    // bottom: 0;
-    // left: 50%;
-    // right: 0;
-    // height: 80vh;
-  }
-  div {
-    /*Free Snowball Dots SVG provided by SVGeez.com - CC 4.0 License - © 2019 Megan Young */
-    // background-color: transparent;
-    // background-color: var(--bg-color);
-    fill: #fff;
-    background-size: 500px;
-    background-repeat: repeat;
+.home {
+  header {
+    position: relative;
     margin-top: 54px;
-    height: calc(100vh - 54px);
-    // img {
-    //   position: absolute;
-    //   top: 53vh;
-    //   right: 0;
-    //   height: 80vh;
-    // }
+    height: var(--height);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    background-color: var(--bg-color2);
+    & > span {
+      color: var(--bg-color);
+      font-size: 5rem;
+      position: absolute;
+      font-family: 'Nunito';
+      font-weight: bolder;
+    }
+    & > :nth-child(2) {
+      top: 200px;
+      left: 50px;
+    }
+    & > :nth-child(3) {
+      top: 200px;
+      right: 170px;
+    }
+    & > img {
+      // position: absolute;
+      // bottom: 0;
+      // left: 50%;
+      // right: 0;
+      // height: 80vh;
+    }
+    div {
+      /*Free Snowball Dots SVG provided by SVGeez.com - CC 4.0 License - © 2019 Megan Young */
+      // background-color: transparent;
+      // background-color: var(--bg-color);
+      fill: #fff;
+      background-size: 500px;
+      background-repeat: repeat;
+      margin-top: 54px;
+      height: calc(100vh - 54px);
+      // img {
+      //   position: absolute;
+      //   top: 53vh;
+      //   right: 0;
+      //   height: 80vh;
+      // }
+    }
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .home {
+    header {
+      & > :nth-child(2) {
+        top: 1vh;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+      & > :nth-child(3) {
+        top: 20vh;
+        left: 50%;
+        right: unset;
+        transform: translateX(-50%);
+      }
+    }
+  }
+}
+@media only screen and (max-width: 425px) {
+  .home {
+    header {
+      & > span {
+        font-size: 4.5rem;
+      }
+      & > :nth-child(2) {
+        top: 20vh;
+        left: 50%;
+      }
+      & > :nth-child(3) {
+        top: 40vh;
+        left: 50%;
+      }
+    }
   }
 }
