--- a/client/src/pages/Item/Item.module.scss
+++ b/client/src/pages/Item/Item.module.scss
@@ -175,3 +175,21 @@
   background-color: blue;
   opacity: 0.5;
 }
+
+@media only screen and (max-width: 767px) {
+  .product {
+    flex-direction: column;
+    height: unset;
+    & > div:nth-child(2) {
+      padding-right: unset;
+    }
+    .rest {
+      & > p,
+      & > div {
+        margin-bottom: 20px;
+      }
+    }
+  }
+}
+@media only screen and (max-width: 425px) {
+}
