added some finishing touches

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -122,6 +122,8 @@ body {
   margin-right: auto;
   padding-bottom: 60px;
   color: var(--color);
+  font-weight: bolder;
+  font-size: 1.2rem;
 }
 // .arrival {
 //   background: url('https://via.placeholder.com/100');
