--- a/client/src/layout/Spinner/Spinner.module.scss
+++ b/client/src/layout/Spinner/Spinner.module.scss
@@ -4,8 +4,5 @@
   align-items: center;
   // margin-top: 54px;
   height: var(--height);
-}
-
-.themed {
-  background-color: #212121;
+  background-color: var(--bg-color2);
 }
