--- a/client/src/pages/Favourites/Favourites.module.scss
+++ b/client/src/pages/Favourites/Favourites.module.scss
@@ -47,6 +47,27 @@
     }
   }
 }
+.nofav {
+  height: 100vh;
+  background-color: var(--bg-color2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 4rem;
+  color: var(--color);
+  text-align: center;
+  & > a {
+    & > div {
+      cursor: pointer;
+      padding: 1rem 2rem;
+      background-color: var(--accent);
+      border-radius: 50px;
+      color: white;
+      margin-top: 4rem;
+    }
+  }
+}
 
 @media only screen and (max-width: 767px) {
   .favourites {
