adjusted logo on mobile

--- a/src/layout/Footer/Footer.module.scss
+++ b/src/layout/Footer/Footer.module.scss
@@ -17,6 +17,7 @@ footer {
     width: 350px;
     & > div {
       ul {
+        justify-content: space-around;
         display: flex;
         margin: 0.5rem auto;
       }
